@@ -1,7 +1,7 @@
 [TargetListInfo]
-Version=201005061239
+Version=201005121248
 NumberOfGroups=3
-Comment="by Someonefromhell, v0.39"
+Comment="by Someonefromhell, v0.40"
 ContactURL=http://www.adslgr.com/forum/member.php?u=1666
 
 [Group1]
@@ -180,7 +180,7 @@ NumberOfTargets=73
 72\Name=Hetzner Germany
 72\Address=213.133.107.4
 73\Name=OVH
-73\Address=213.186.33.21
+73\Address=213.186.33.13
 
 [Group3]
 Name=Game servers
